[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Trees.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}

[sub_resource type="Animation" id=3]
resource_name = "wind"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, 5.0 ]
}

[node name="Resource" type="StaticBody2D" groups=[
"damagable",
"resource",
]]
pause_mode = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer_Shake" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/shake = SubResource( 2 )

[node name="AnimationPlayer_Wind" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/wind = SubResource( 3 )

[node name="Audio_Hit" type="Node2D" parent="."]

[node name="Audio_Break" type="Node2D" parent="."]
